# flare

./: .gitignore  Makefile  README.md  pyproject.toml  structure.md
.github/workflows/: ci.yml
src/flare/: complete.py  dashboard.py  importers.py  main.py  schema.py  stats.py
src/flare/generate/: generator.py  task.py
src/flare/scorer/: base.py  get_scorer.py  majority_vote_model.py  task.py
src/flare/scorer/attribute_extraction/: prompts.py  schema.py  scorer.py
src/flare/scorer/bias/: prompts.py  schema.py  scorer.py
src/flare/scorer/debunking/: prompts.py  scorer.py
src/flare/scorer/factuality/: prompts.py  scorer.py
src/flare/scorer/jailbreak/: encoding_prompt.py  framing_prompt.py  injection_prompt.py  scorer.py
src/flare/scorer/misinformation/: prompts.py  scorer.py
src/flare/scorer/tools/: prompts.py  schema.py  scorer.py  utils.py
src/flare/scorer/vulnerable_misguidance/: prompts.py  scorer.py
src/flare/worker/: log.py  registry.py
tests/data/: example_config.json
tests/data/bias-samples/: example.jsonl
