[project]
name = "flare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "boto3==1.40.49",
    "litellm>=1.80.0",
    "numpy==2.3.2",
    "openai>=1.97.1,<2",
    "pandas==2.3.1",
    "pydantic>=2.11.7",
    "pyyaml==6.0.2",
    "rich==14.1.0",
    "scipy==1.16.1",
    "tenacity>=9.1.2",
    "uvloop==0.21.0",
]

[dependency-groups]
dev = [
    "black==26.3.1",
    "ipykernel>=6.30.1",
    "isort==6.1.0",
]

[tool.isort]
profile = "black"
extend_skip_glob = [".history/*"]

[tool.hatch.build.targets.wheel]
packages = ["src/flare"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
flare = "flare.main:main_cli"

[tool.uv]
# Block compromised litellm versions — supply chain attack (CVE-2026-PENDING)
# https://github.com/BerriAI/litellm/issues/24512
constraint-dependencies = ["litellm!=1.82.7,!=1.82.8"]
